--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todo-ts",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://swtpumpkin.github.io/react-todo-ts",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
@@ -20,6 +21,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
